ref : [api] builder 패턴 제거, 도메인 엔티디 제거에 따른 수정